[package]
name = "backend-rust"
version = "0.1.0"
authors = ["Arseniy Khvorov <khvorov45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1"
serde_derive = "1"
toml = "0.5"
serde_json = "1.0"
