[package]
name = "backend-rust"
version = "0.1.0"
authors = ["Arseniy Khvorov <khvorov45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1"
serde_derive = "1"
toml = "0.5"
serde_json = "1.0"
chrono = {version="0.4", features=["serde"]}
rustyline="8"
thiserror="1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rand = "0.8"
sha2 = "0.9"
hex = "0.4"
lettre = {version = "0.10.0-beta.2", features=["tokio1", "tokio1-native-tls"]}
reqwest = { version = "0.11", features = ["json"] }
